@@ -13,6 +13,6 @@ module CommitsHelper
   end
 
   def commit_link(commit)
-    link_to(commit.short_sha, project_commit_path(commit.project, commit))
+    link_to(commit.short_sha, project_show_commit_path(commit.project, sha: commit.sha, ref: commit.ref))
   end
 end
