@@ -9,7 +9,7 @@
         Edit Job
 
 %p
-  = link_to project_commit_path(@project, @build.commit) do
+  = link_to project_show_commit_path(@project, sha: @commit.sha, ref: @commit.ref) do
     &larr; Back to project commit
 %hr
 #up-build-trace
