@@ -3,7 +3,7 @@
     = commit.status
 
   %td.build-link
-    = link_to project_commit_path(commit.project, commit) do
+    = link_to project_show_commit_path(commit.project, sha: commit.sha, ref: commit.ref) do
       %strong #{commit.short_sha}
 
   %td.build-message
