@@ -28,11 +28,13 @@ Rails.application.routes.draw do
     end
 
     resource :charts, only: [:show]
-    resources :commits, only: [:show] do
+    resources :commits, only: [] do
       member do
         get :status
       end
     end
+
+    get '/commit/:sha/ref/*ref' => 'commits#show', as: :show_commit
 
     resources :builds, only: [:show] do
       member do
